--- a/igenio/src/App.css
+++ b/igenio/src/App.css
@@ -5,42 +5,61 @@
 .container-fluid {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  background-color: midnightblue;
+  align-items: center left;
+  background-image: url('http://paradisefoundaround.com/wp-content/uploads/northern_lights_iceland.jpg');
   color: white;
   height:  800px;
-  border: 5px dotted limegreen;
-}
+/*  border: 5px dotted limegreen;
+*/}
 
 
 
 header {
-  background-image: url("https://media.giphy.com/media/pkVHZKcnzzkmA/giphy.gif");
-  align-self: stretch;
-  border: 4px solid orange;
-  height: 200px;
+/*  background-image: url("https://media.giphy.com/media/pkVHZKcnzzkmA/giphy.gif");
+*/*//*  align-self: stretch;
+/*  border: 1px #00ff83;
+*/  background-position: center;
+/*  font-style:
+*/  height: 110px;
 
 }
 
 nav {
   display: inline-flex;
-  border: 4px solid teal;
+  width: 100%;
+  height: 50%;
+  background-image: url("https://media.giphy.com/media/pkVHZKcnzzkmA/giphy.gif");
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-style: italic;
+  font-weight: bold;
+  font-variant: small-caps;
+  color: #74d600;
+/*  border: 4px solid teal;
+*/}
+
+.navbar-brand {
+  color: #74d600 !important;
+  font-style: italic;
+  font-weight: bold;
+  font-variant: small-caps;
 }
 
 section {
-  align-self: stretch;
-  background-color: purple;
-  border: 4px solid white;
-  height: 20%;
-
+  align-self: center;
+/*  background-color: #ADFF2F;
+*/
+/* border: 4px solid white;
+*/  height: 20%;
+    color: #74d600;
 
 }
 
-#idea-tab {
+/*#idea-tab {
   background-color: orange;
   text-align: center;
   width: 50%;
-}
+}*/
 
 textarea {
  background-color: pink;
@@ -53,20 +72,164 @@ blockquote {
 }
 
 footer {
-  margin-top: 80px;
+  margin-top: 400px;
   align-self: stretch;
   justify-content: flex-end;
-  border: 4px solid limegreen;
+  border: 2px limegreen;
 }
 
-/*.logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+/*single tweet page */
+#buttonST {
+/*  font-size: 20px;
+*/}
+
+#grow:hover, #buttonST:hover {
+  transform: scale(1.3);
 }
 
 
-@keyframes igenio-logo {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+/*login form below */
+#loginUserName {
+  padding: 8px;
+  width: 150px;
+  margin: 8px;
 }
-*/
+
+#loginPassword {
+  padding: 8px;
+  width: 150px;
+  margin: 8px;
+}
+
+#fade {
+  opacity:0.2;
+  display: block;
+  margin: auto;
+  background-color: #74d600;
+  height: 30px;
+  width: 70px;
+}
+
+#fade:hover {
+  opacity:7;
+}
+
+
+/*register form below*/
+
+a {
+  text-decoration: none;
+  color: #0000CD;
+}
+
+#buttonRegister:hover {
+  font-size: 20px;
+  background-color: #00FF7F;
+  text-decoration: none;
+}
+
+#buttonRandom:hover {
+  font-size: 20px;
+  background-color: #00FF7F;
+  /*margin: 20px;*/
+
+}
+
+#buttonRandom {
+  margin: 60px;
+  margin-left: 200px;
+  padding: 15px;
+}
+
+.register-form {
+  padding: -50px;
+/*  padding-left: 20px;
+*/}
+
+#email {
+  padding: 8px;
+  width: 150px;
+  margin: 8px;
+}
+#username {
+  padding: 8px;
+  width: 150px;
+  margin: 8px;
+}
+#password {
+  padding: 8px;
+  width: 150px;
+  margin: 8px;
+}
+#circle {
+  margin: 0 auto;
+  display: block;
+  padding: 10px;
+}
+
+#circle:hover {
+  border-radius:70%;
+  padding: 10px;
+  background-color: #00FA9A;
+}
+
+/*form idea below */
+.idea-form {
+  padding: 100px;
+  height: 30px;
+  width: 100px;
+  margin-left: -50%;
+  margin-top: -30%;
+/*  background-color: #32CD32;
+*/  align-self: center;
+}
+
+#idea-tab {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#input {
+  padding: 10px;
+  margin: 5px;
+  margin-left: 270px;
+  width: 200px;
+  background-color: #98FB98;
+
+}
+
+/*post button */
+#color {
+  margin-left: 350px;
+  color: blue;
+}
+
+#color:hover {
+  font-size: 15px;
+  background:#00FF7F;
+  /*border-radius:70%;*/
+  padding: 8px;
+}
+
+#oneIdea {
+
+}
+
+h1 {
+  margin: 40px;
+  padding-left: 90px;
+}
+
+#scrollbar {
+  height: 100px;
+  width: 120%;
+  margin: 0 auto;
+  background: #98FB98;
+  overflow-y: scroll;
+  color: black;
+}
+
+
+
+
